# PingMeBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 142e53485835_create_tasks_table.py  1446430576be_remove_task_remind_at_add_task_reminder_.py
app/: config.py  db.py  main.py
app/api/: tasks.py
app/models/: __init__.py  reminder.py  task.py
app/schemas/: task.py
app/static/: style.css
app/templates/: base.html  task_edit.html  tasks.html
app/web/: routes.py
